xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__concat_expr.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"'a' || 'b'\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Binary(BinaryExpr(
        operator: Concat,
        left: PathExpr(
          steps: [
            PrimaryExpr(Literal(String("a"))),
          ],
        ),
        right: PathExpr(
          steps: [
            PrimaryExpr(Literal(String("b"))),
          ],
        ),
      )),
    ]))),
  ],
)))
