xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__dynamic_function_call_args.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"$foo(1 + 1, 3)\")"
---
Ok(Path(PathExpr(
  steps: [
    PostfixExpr(
      primary: VarRef(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      )),
      postfixes: [
        ArgumentList([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Expr(Expr([
                Binary(BinaryExpr(
                  operator: Add,
                  left: PathExpr(
                    steps: [
                      PrimaryExpr(Literal(Integer((Positive, [
                        1,
                      ])))),
                    ],
                  ),
                  right: PathExpr(
                    steps: [
                      PrimaryExpr(Literal(Integer((Positive, [
                        1,
                      ])))),
                    ],
                  ),
                )),
              ]))),
            ],
          )),
          Path(PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                3,
              ])))),
            ],
          )),
        ]),
      ],
    ),
  ],
)))
