xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__if_expr.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"if (1) then 2 else 3\")"
---
Ok(If(IfExpr(
  condition: Expr([
    Path(PathExpr(
      steps: [
        PrimaryExpr(Expr(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                1,
              ])))),
            ],
          )),
        ]))),
      ],
    )),
  ]),
  then: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        2,
      ])))),
    ],
  )),
  else_: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        3,
      ])))),
    ],
  )),
)))
