xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__instance_of_with_star.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"1 instance of xs:integer*\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Apply(ApplyExpr(
        path_expr: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        ),
        operator: InstanceOf(Item(Item(
          item_type: AtomicOrUnionType(Name(
            name: "integer",
            prefix: Some("xs"),
            namespace: Some("http://www.w3.org/2001/XMLSchema"),
          )),
          occurrence: Many,
        ))),
      )),
    ]))),
  ],
)))
