xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__intersect.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"child::foo intersect child::bar\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Binary(BinaryExpr(
        operator: Intersect,
        left: PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(Name(
                name: "foo",
                prefix: None,
                namespace: None,
              ))),
              predicates: [],
            )),
          ],
        ),
        right: PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Child,
              node_test: NameTest(Name(Name(
                name: "bar",
                prefix: None,
                namespace: None,
              ))),
              predicates: [],
            )),
          ],
        ),
      )),
    ]))),
  ],
)))
