xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__named_function_ref.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"my_function#2\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(NamedFunctionRef(NamedFunctionRef(
      name: Name(
        name: "my_function",
        prefix: None,
        namespace: None,
      ),
      arity: 2,
    ))),
  ],
)))
